@@ -31,7 +31,7 @@ namespace CIAO
       XStr() : _wstr(0L) { };
 
 // On unicode windows, ACE_TCHAR == XMLCh
-#if !defined (_MSC_VER) && !defined (ACE_USES_WCHAR)	  
+#if !defined (_MSC_VER) && !defined (ACE_USES_WCHAR)      
       XStr (const ACE_TCHAR* str);
 #endif
 
